feat: 「ひとは〜」で始まる文の「ひと」を漢字にしないルール

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "writing"
   ],
   "scripts":{
-    "unit":"node test/index.js"
+    "unit":"node test/index.js",
+    "lint":"textlint index.md"
   },
   "author": "Taiyo Fujii",
   "license": "MIT",
