--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "novel",
     "writing"
   ],
-  "scripts":{
-    "unit":"node test/index.js",
-    "lint":"textlint index.md"
+  "scripts": {
+    "unit": "node test/index.js",
+    "lint": "textlint index.md",
+    "fmt": "prettier **/*.js --write"
   },
   "author": "Taiyo Fujii",
   "license": "MIT",
@@ -21,10 +22,12 @@
     "@textlint-ja/textlint-rule-no-synonyms": "^1.1.0",
     "jaconv": "^1.0.4",
     "morpheme-match-textlint": "^2.0.6",
+    "prettier": "^2.4.1",
     "textlint": "^12.0.0",
     "textlint-rule-general-novel-style-ja": "^1.3.0",
     "textlint-rule-preset-jtf-style": "^2.3.8",
-    "textlint-rule-prh": "^5.3.0"
+    "textlint-rule-prh": "^5.3.0",
+    "textlint-tester": "^12.0.2"
   },
   "dependencies": {
     "kuromoji": "^0.1.2"
