--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "writing"
   ],
   "scripts": {
-    "unit": "node test/index.js",
+    "dev": "node development/index.js",
     "lint": "textlint index.md",
+    "test": "mocha ./test",
     "fmt": "prettier **/*.js --write"
   },
   "author": "Taiyo Fujii",
@@ -21,10 +22,12 @@
     "@textlint-ja/textlint-rule-morpheme-match": "^2.0.0",
     "@textlint-ja/textlint-rule-no-synonyms": "^1.1.0",
     "jaconv": "^1.0.4",
+    "mocha": "^9.1.3",
     "morpheme-match-textlint": "^2.0.6",
     "prettier": "^2.4.1",
     "textlint": "^12.0.0",
     "textlint-rule-general-novel-style-ja": "^1.3.0",
+    "textlint-rule-no-todo": "^2.0.1",
     "textlint-rule-preset-jtf-style": "^2.3.8",
     "textlint-rule-prh": "^5.3.0",
     "textlint-tester": "^12.0.2"
